--- a/website/style.css
+++ b/website/style.css
@@ -1,14 +1,52 @@
 body{
     font-family: sans-serif;
+    background-color: rgb(210, 212, 221);
 }
 
-#submitBtn{
-    padding: 5px 25px;
-    border-radius: 5px;
-    background-color: rgb(171, 96, 171)
+h1{
+    color: brown;
 }
 
-.myLabels{
+form{
+    background-color: white;
+    text-align: center;
+    max-width: 350px;
+    margin: auto;
+    padding: 25px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 15px black;
+}
+
+#textBox{
+    width: 50%;
+    text-align: center;
     font-size: 2em;
-    color: blue
+    border: 2px solid black;
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+label{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+button{
+    margin-top: 30px;
+    background-color: rgb(114, 66, 114);
+    font-size: 1.5em;
+    border-radius: 5px;
+    border: none;
+    padding: 10px 15px;
+    color: white;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color: rgb(137, 60, 137)
+}
+
+#result{
+    font-size: 1.75em;
+    font-weight: bold;
 }
